src/objects/Oracle_Warranty_REST_Services_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Oracle Warranty Web REST Services published by Oracle EBS to query and maintain the warranty repository.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FindWarrantyInfoService__c</fullName>
        <label>FindWarrantyInfoService</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GetStartupDatesService__c</fullName>
        <label>GetStartupDatesService</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GetTokenService__c</fullName>
        <label>GetTokenService</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAuthToken_URL__c</fullName>
        <description>Web Service Endpoint to get the authentication token</description>
        <label>OAuthToken_URL</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Password for authentication</description>
        <label>Password</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SetStartupDatesService__c</fullName>
        <label>SetStartupDatesService</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <description>User name for authentication</description>
        <label>User Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_URL__c</fullName>
        <description>Web Service endpoint for all warranty functions</description>
        <label>Warranty_URL</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Oracle_Warranty_REST_Services_Config</label>
</CustomObject>